images and code added

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -1,6 +1,40 @@
 <html>
   <head>
     <title></title>
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
   </head>
-  <body></body>
+  <body>
+    <header class="navigation">
+      <div class="inline-block logo">
+        <img src="logo.jpg" alt="logo" />
+      </div>
+      <nav class="inline-block">
+        <ul class="headerlist">
+          <li>About</li>
+          <li>Skills</li>
+          <li>Work</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+    </header>
+    <section class="heroImg.">
+      <div class="content">
+        <img src="JdcNAcDg_400x400.jpg" alt="pic of me" />
+        <p>
+          I am a passionate UX/UI Designer based out of Washington DC. With my
+          background in Neuroscience, I am truly dedicated to understanding the
+          science of empathy and finding creative user solutions.
+        </p>
+        <button>Download Resume</button>
+      </div>
+    </section>
+    <footer>
+      <ul class="footerlist">
+        <li>About</li>
+        <li>Skills</li>
+        <li>Work</li>
+        <li>Contact</li>
+      </ul>
+    </footer>
+  </body>
 </html>
