--- a/CSS/index.html
+++ b/CSS/index.html
@@ -6,7 +6,7 @@
   <body>
     <header class="navigation">
       <div class="inline-block logo">
-        <img src="logo.jpg" alt="logo" />
+        <img src="image/at logo.jpg" alt="logo" />
       </div>
       <nav class="inline-block">
         <ul class="headerlist">
@@ -19,7 +19,7 @@
     </header>
     <section class="heroImg.">
       <div class="content">
-        <img src="JdcNAcDg_400x400.jpg" alt="pic of me" />
+        <img src="image/JdcNAcDg_400x400.jpg" alt="pic of me" />
         <p>
           I am a passionate UX/UI Designer based out of Washington DC. With my
           background in Neuroscience, I am truly dedicated to understanding the
