--- a/CSS/index.html
+++ b/CSS/index.html
@@ -17,9 +17,10 @@
         </ul>
       </nav>
     </header>
+
     <section class="heroImg.">
       <div class="content">
-        <img src="image/JdcNAcDg_400x400.jpg" alt="pic of me" />
+        <img src="image/JdcNAcDg_400x400.jpg" alt="Pic of me" />
         <p>
           I am a passionate UX/UI Designer based out of Washington DC. With my
           background in Neuroscience, I am truly dedicated to understanding the
@@ -28,11 +29,13 @@
         <button>Download Resume</button>
       </div>
     </section>
+
     <section class="MyUXSkills">
       <h1>My UX Skills</h1>
       <div class="SkillsSection">
         <div class="SkillCard1">
           <h3>User Research</h3>
+          <img src="image\user research.jpeg" alt="User Research" />
           <p>
             Research is the basis of every quality project. Understanding users'
             psychology drives creative design solutions!
@@ -40,6 +43,7 @@
         </div>
         <div class="SkillCard2">
           <h3>Visual Design</h3>
+          <img src="image\visual design.webp" alt="Visual Design" />
           <p>
             From current visual design standards to areas such as Interaction
             Design!
@@ -47,6 +51,10 @@
         </div>
         <div class="SkillCard3">
           <h3>Information Architecture</h3>
+          <img
+            src="image\website-information-architecture.jpg"
+            alt="Information Architecture"
+          />
           <p>
             Intuitive structuring and organizing of content is a vital part of a
             user's experience.
@@ -54,6 +62,40 @@
         </div>
       </div>
     </section>
+
+    <section class="MyWork">
+      <h1>My Work</h1>
+      <div class="WorkSection">
+        <div><img src="image\GeoJam.png" alt="GeoJam" /></div>
+        <div class="WorkCard1">
+          <h3>GeoJam</h3>
+          <p>
+            Research is the basis of every quality project. Understanding users'
+            psychology drives creative design solutions!
+          </p>
+          <button>View</button>
+        </div>
+        <div><img src="image\depedu.png" alt="Department of Education" /></div>
+        <div class="WorkCard2">
+          <h3>Department of Education</h3>
+          <p>
+            From current visual design standards to areas such as Interaction
+            Design!
+          </p>
+          <button>View</button>
+        </div>
+        <div><img src="image\pawfund.png" alt="Paw Fund Non-Profit" /></div>
+        <div class="WorkCard3">
+          <h3>Paw Fund Non-Profit</h3>
+          <p>
+            Intuitive structuring and organizing of content is a vital part of a
+            user's experience.
+          </p>
+          <button>View</button>
+        </div>
+      </div>
+    </section>
+
     <footer>
       <ul class="footerlist">
         <li>About</li>
