--- a/CSS/index.html
+++ b/CSS/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title></title>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header class="navigation">
@@ -30,6 +30,7 @@
       </div>
     </section>
 
+    <!--  My UX Skills section coded using CSS flex -->
     <section class="MyUXSkills">
       <h1>My UX Skills</h1>
       <div class="SkillsSection">
@@ -66,7 +67,7 @@
     <section class="MyWork">
       <h1>My Work</h1>
       <div class="WorkSection">
-        <div><img src="image\GeoJam.png" alt="GeoJam" /></div>
+        <div class="WorkImg"><img src="image\GeoJam.png" alt="GeoJam" /></div>
         <div class="WorkCard1">
           <h3>GeoJam</h3>
           <p>
@@ -75,7 +76,9 @@
           </p>
           <button>View</button>
         </div>
-        <div><img src="image\depedu.png" alt="Department of Education" /></div>
+        <div class="WorkImg">
+          <img src="image\depedu.png" alt="Department of Education" />
+        </div>
         <div class="WorkCard2">
           <h3>Department of Education</h3>
           <p>
@@ -84,7 +87,9 @@
           </p>
           <button>View</button>
         </div>
-        <div><img src="image\pawfund.png" alt="Paw Fund Non-Profit" /></div>
+        <div class="WorkImg">
+          <img src="image\pawfund.png" alt="Paw Fund Non-Profit" />
+        </div>
         <div class="WorkCard3">
           <h3>Paw Fund Non-Profit</h3>
           <p>
