--- a/CSS/index.html
+++ b/CSS/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title></title>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header class="navigation">
@@ -26,6 +26,32 @@
           science of empathy and finding creative user solutions.
         </p>
         <button>Download Resume</button>
+      </div>
+    </section>
+    <section class="MyUXSkills">
+      <h1>My UX Skills</h1>
+      <div class="SkillsSection">
+        <div class="SkillCard1">
+          <h3>User Research</h3>
+          <p>
+            Research is the basis of every quality project. Understanding users'
+            psychology drives creative design solutions!
+          </p>
+        </div>
+        <div class="SkillCard2">
+          <h3>Visual Design</h3>
+          <p>
+            From current visual design standards to areas such as Interaction
+            Design!
+          </p>
+        </div>
+        <div class="SkillCard3">
+          <h3>Information Architecture</h3>
+          <p>
+            Intuitive structuring and organizing of content is a vital part of a
+            user's experience.
+          </p>
+        </div>
       </div>
     </section>
     <footer>
