--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <header class="navigation">
       <div class="inline-block logo">
-        <img src="image/at logo.jpg" alt="logo" />
+        <img src="image/at logo.jpg" alt="logo" height="100px" width="100px" />
       </div>
       <nav class="inline-block">
         <ul class="headerlist">
@@ -36,7 +36,12 @@
       <div class="SkillsSection">
         <div class="SkillCard1">
           <h3>User Research</h3>
-          <img src="image\user research.jpeg" alt="User Research" />
+          <img
+            src="image\user research.jpeg"
+            alt="User Research"
+            width="400"
+            height="300"
+          />
           <p>
             Research is the basis of every quality project. Understanding users'
             psychology drives creative design solutions!
@@ -44,7 +49,12 @@
         </div>
         <div class="SkillCard2">
           <h3>Visual Design</h3>
-          <img src="image\visual design.webp" alt="Visual Design" />
+          <img
+            src="image\visual design.webp"
+            alt="Visual Design"
+            width="400"
+            height="300"
+          />
           <p>
             From current visual design standards to areas such as Interaction
             Design!
@@ -55,6 +65,8 @@
           <img
             src="image\website-information-architecture.jpg"
             alt="Information Architecture"
+            width="400"
+            height="300"
           />
           <p>
             Intuitive structuring and organizing of content is a vital part of a
@@ -64,11 +76,14 @@
       </div>
     </section>
 
+    <!-- My Work Section Constructed using CSS Grid -->
     <section class="MyWork">
       <h1>My Work</h1>
       <div class="WorkSection">
-        <div class="WorkImg"><img src="image\GeoJam.png" alt="GeoJam" /></div>
         <div class="WorkCard1">
+          <div class="WorkImg">
+            <img src="image\GeoJam.png" alt="GeoJam" width="200" height="400" />
+          </div>
           <h3>GeoJam</h3>
           <p>
             Research is the basis of every quality project. Understanding users'
@@ -76,10 +91,15 @@
           </p>
           <button>View</button>
         </div>
-        <div class="WorkImg">
-          <img src="image\depedu.png" alt="Department of Education" />
-        </div>
         <div class="WorkCard2">
+          <div class="WorkImg">
+            <img
+              src="image\depedu.png"
+              alt="Department of Education"
+              width="200"
+              height="400"
+            />
+          </div>
           <h3>Department of Education</h3>
           <p>
             From current visual design standards to areas such as Interaction
@@ -87,10 +107,15 @@
           </p>
           <button>View</button>
         </div>
-        <div class="WorkImg">
-          <img src="image\pawfund.png" alt="Paw Fund Non-Profit" />
-        </div>
         <div class="WorkCard3">
+          <div class="WorkImg">
+            <img
+              src="image\pawfund.png"
+              alt="Paw Fund Non-Profit"
+              width="300"
+              height="400"
+            />
+          </div>
           <h3>Paw Fund Non-Profit</h3>
           <p>
             Intuitive structuring and organizing of content is a vital part of a
